changes in performance code

--- a/dlt_advanced/Lesson_9_Performance_optimisation.ipynb
+++ b/dlt_advanced/Lesson_9_Performance_optimisation.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -3634,24 +3635,22 @@
       "cell_type": "code",
       "source": [
         "import dlt\n",
-        "import requests\n",
-        "from google.colab import userdata\n",
-        "import time\n",
         "from dlt.sources.helpers.rest_client import RESTClient\n",
         "from dlt.sources.rest_api import RESTAPIConfig, rest_api_resources\n",
         "from dlt.sources.helpers.rest_client.paginators import HeaderLinkPaginator\n",
         "import os\n",
         "\n",
-        "# Extraction. Number of parallel threads with parrallewized = True\n",
-        "#os.environ['EXTRACT__WORKERS'] = '3'\n",
-        "# Enable parallelism: Use multiple processes\n",
-        "#os.environ['NORMALIZE__WORKERS'] = '3'\n",
+        "# Extraction. Number of parallel threads with parrallelized = True\n",
+        "os.environ['EXTRACT__WORKERS'] = '3'\n",
+        "# Extraction. Enable file rotation by setting a file size limit. By default all records to one file.\n",
+        "os.environ[\"EXTRACT__DATA_WRITER__FILE_MAX_ITEMS\"] = \"50000\"\n",
+        "# Extraction. Control buffer size. By default 5000\n",
+        "os.environ['DATA_WRITER__BUFFER_MAX_ITEMS'] = '10000'\n",
+        "# Normalization. Enable parallelism: Use multiple processes\n",
+        "os.environ['NORMALIZE__WORKERS'] = '3'\n",
         "# Loading. Control the number of threads\n",
-        "#os.environ[\"LOAD__WORKERS\"] = \"3\"\n",
-        "# Normalization. Enable file rotation by setting a file size limit\n",
-        "#os.environ[\"EXTRACT__DATA_WRITER__FILE_MAX_ITEMS\"] = \"100000\"\n",
-        "# Normalization Control buffer size\n",
-        "#os.environ['DATA_WRITER__BUFFER_MAX_ITEMS'] = '5000'\n",
+        "os.environ[\"LOAD__WORKERS\"] = \"3\"\n",
+        "\n",
         "\n",
         "\n",
         "@dlt.source\n",
@@ -3663,42 +3662,36 @@
         "            \"type\": \"header_link\",\n",
         "            },\n",
         "        },\n",
+        "        \"resource_defaults\": {\n",
+        "            \"write_disposition\": \"replace\",\n",
+        "            \"parallelized\": True,\n",
+        "            \"endpoint\": {\n",
+        "                \"params\": {\n",
+        "                    \"page_size\": 2000,\n",
+        "                }\n",
+        "            },\n",
+        "        },\n",
         "        \"resources\": [\n",
         "            {\n",
         "                \"name\": \"orders\",\n",
         "                \"endpoint\": {\n",
-        "                    \"path\": \"orders\",\n",
-        "                    \"method\": \"GET\",\n",
-        "                    \"params\": {\n",
-        "                        \"page_size\": 4000,\n",
-        "                    }\n",
+        "                    \"path\": \"orders\"\n",
         "                },\n",
-        "                \"write_disposition\": \"replace\",\n",
         "                \"primary_key\": \"id\"\n",
         "            },\n",
         "            {\n",
         "                \"name\": \"customers\",\n",
         "                \"endpoint\": {\n",
         "                    \"path\": \"customers\",\n",
-        "                    \"method\": \"GET\",\n",
-        "                    \"params\": {\n",
-        "                        \"page_size\": 2000,\n",
-        "                    }\n",
         "                },\n",
-        "                \"write_disposition\": \"replace\",\n",
         "                \"primary_key\": \"id\"\n",
         "            },\n",
         "            {\n",
         "                \"name\": \"products\",\n",
         "                \"endpoint\": {\n",
-        "                    \"path\": \"products\",\n",
-        "                    \"method\": \"GET\",\n",
-        "                    \"params\": {\n",
-        "                        \"page_size\": 2000,\n",
-        "                    }\n",
+        "                    \"path\": \"products\"\n",
         "                },\n",
-        "                \"write_disposition\": \"replace\",\n",
-        "                \"primary_key\": \"sku\"\n",
+        "                \"primary_key\": \"sku\",\n",
         "            }\n",
         "        ]\n",
         "  }\n",
@@ -3719,16 +3712,58 @@
         "# print(pipeline.dataset().row_counts().fetchall())\n",
         "\n",
         "# Measures\n",
-        "# Step extract COMPLETED in 6 minutes and 17.40 seconds.\n",
-        "# Step normalize COMPLETED in 12.95 seconds.\n",
-        "# Step load COMPLETED in 13.65 seconds.\n",
-        "# Step run COMPLETED in 6 minutes and 44.01 seconds."
+        "# Step extract COMPLETED in 5 minutes and 59.86 seconds.\n",
+        "# Step normalize COMPLETED in 12.14 seconds.\n",
+        "# Step load COMPLETED in 13.84 seconds.\n",
+        "# Step run COMPLETED in 6 minutes and 25.86 seconds."
       ],
       "metadata": {
-        "id": "hWqcOu88t6pX"
+        "id": "hWqcOu88t6pX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23682d4c-5915-4d03-951f-12a2c3dd775e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Run started at 2025-05-10 21:20:08.785699+00:00 and COMPLETED in 6 minutes and 25.86 seconds with 4 steps.\n",
+            "Step extract COMPLETED in 5 minutes and 59.86 seconds.\n",
+            "\n",
+            "Load package 1746912008.8064368 is EXTRACTED and NOT YET LOADED to the destination and contains no failed jobs\n",
+            "\n",
+            "Step normalize COMPLETED in 12.14 seconds.\n",
+            "Normalized data for the following tables:\n",
+            "- _dlt_pipeline_state: 1 row(s)\n",
+            "- customers: 935 row(s)\n",
+            "- orders: 61948 row(s)\n",
+            "- orders__items: 90900 row(s)\n",
+            "- products: 10 row(s)\n",
+            "\n",
+            "Load package 1746912008.8064368 is NORMALIZED and NOT YET LOADED to the destination and contains no failed jobs\n",
+            "\n",
+            "Step load COMPLETED in 13.84 seconds.\n",
+            "Pipeline extract_jaffle_example1 load step completed in 13.36 seconds\n",
+            "1 load package(s) were loaded to destination duckdb and into dataset mydata_20250510092008\n",
+            "The duckdb destination used duckdb:////content/extract_jaffle_example1.duckdb location to store data\n",
+            "Load package 1746912008.8064368 is LOADED and contains no failed jobs\n",
+            "\n",
+            "Step run COMPLETED in 6 minutes and 25.86 seconds.\n",
+            "Pipeline extract_jaffle_example1 load step completed in 13.36 seconds\n",
+            "1 load package(s) were loaded to destination duckdb and into dataset mydata_20250510092008\n",
+            "The duckdb destination used duckdb:////content/extract_jaffle_example1.duckdb location to store data\n",
+            "Load package 1746912008.8064368 is LOADED and contains no failed jobs\n",
+            "      table_name  row_count\n",
+            "0         orders      61948\n",
+            "1      customers        935\n",
+            "2       products         10\n",
+            "3  orders__items      90900\n"
+          ]
+        }
+      ]
     }
   ]
 }
